--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
     "expo": "~47.0.8",
+    "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
