--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~47.0.8",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
+    "expo-mail-composer": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
