fix fingerprint, add yarn script

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,11 +142,11 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId 'com.murojaah.murojaah_mobile_7'
+        applicationId 'com.ardhihdra.murojaah'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "0.1.1"
+        versionCode 6
+        versionName "0.3.2"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
         if (isNewArchitectureEnabled()) {
