add ios support

--- a/app.json
+++ b/app.json
@@ -44,6 +44,14 @@
     "plugins": [
       "@react-native-firebase/app",
       "@react-native-google-signin/google-signin",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ]
     ]
   }
 }
