--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "fingerprint": "cd android && keytool -keystore app/debug.keystore -list -v",
+    "prebuild-clean": "expo prebuild --clean",
     "prebuild-android": "expo prebuild --platform android",
+    "prebuild-ios": "expo prebuild --platform ios",
     "build-local-native-android": "cd android && ./gradlew assembleRelease",
     "build-local-preview-android": "eas build -p android --profile preview --local",
     "build-local-production-android": "eas build -p android --profile production --local",
@@ -30,6 +32,7 @@
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
     "expo": "~47.0.12",
+    "expo-build-properties": "^0.4.1",
     "expo-constants": "~14.0.2",
     "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
